# ReflexiveComposition

./: README.md  pyproject.toml
data/: recency_benchmark_facts.json
examples/: README.md  basic_example.py  run_all.py
examples/code_security/: README.md  code-security-evaluator.py  code_security_eval.py  kg-llm-code.py  prompt_templates.py  run_codegen.py  security-kg-builder.py  security-schema.json
examples/code_security/data/: queries.jsonl  security-test-cases.json  security_data.json
examples/medical_data/: README.md  prompt_templates.py  run_medical.py  run_medical_query_loop.py
examples/medical_data/data/: fhir_patient.json  (+3 more)
examples/temporal_qa/: README.md  prompt_templates.py  run_temporal.py
reflexive_composition/: core.py
reflexive_composition/eval/: evaluator.py  metrics.py  usecase.py
reflexive_composition/hitl/: __init__.py  interface.py  routing.py  validator.py
reflexive_composition/kg2llm/: __init__.py  contradiction_detector.py  prompt_builder.py  target_llm.py
reflexive_composition/knowledge_graph/: __init__.py  graph.py  storage.py  subgraph.py  update_triggers.py
reflexive_composition/llm2kg/: __init__.py  extractor.py  knowledge_builder.py  prompt_templates.py  schema_evolution.py
reflexive_composition/utils/: eval_utils.py  llm_utils.py  text_utils.py
results/basic_example/: gemini-2.0-flash.1.txt  gemini-2.0-flash.2.txt
results/temporal_qa/: benchmark_results.csv  detailed_responses.json
tests/code-security/: critical-tests.py  deprecation-tester.py  multi-llm-tester.py  testing-guide.md
tests/temporal_qa/: benchmark-experiment.py  langchain-benchmark.py  ollama-benchmark.py  ollama-requirements.txt  requirements.txt
(+10 files in other folders)
